deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tebofy-api
  namespace: default
  labels:
    app: tebofy-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tebofy-api
  template:
    metadata:
      labels:
        app: tebofy-api
    spec:
      containers:
      - name: tebofy-api
        image: registry.gitlab.com/tebofy/tebofy-web-api:5289f708f598a05e91dbfe76480282de50b2dca2
        imagePullPolicy: Always
        ports:
        - containerPort: 3400
          name: web
          protocol: TCP
      imagePullSecrets:
      - name: gitlab-auth

# ------------------- Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: tebofy-api
  name: tebofy-api
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 3400
    targetPort: 3400
  selector:
    app: tebofy-api
  type: NodePort
