tebofy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tebofy-api
  namespace: default
  labels:
    app: tebofy-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tebofy-api
  template:
    metadata:
      labels:
        app: tebofy-api
    spec:
      containers:
      - name: tebofy-api
        image: registry.gitlab.com/tebofy/tebofy-web-api:d1ea6555a512bdd463560e8e506fa0457e10e341
        imagePullPolicy: Always
        ports:
        - containerPort: 3400
          name: web
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/health-check
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 120
        readinessProbe:
          httpGet:
            path: /api/health-check
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 120
      imagePullSecrets:
      - name: gitlab-auth

---

# ------------------- Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: tebofy-api
  name: tebofy-api
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 3400
    targetPort: 3400
  selector:
    app: tebofy-api
